chore: added bower to workflow dependencies

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "url": "https://github.com/cironunes/angular-off-canvas/issues"
   },
   "devDependencies": {
+    "bower": "~1.2.8",
     "karma": "~0.11.12",
     "karma-jasmine": "~0.1.5",
     "karma-chrome-launcher": "~0.1.2",
