--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
   },
   "devDependencies": {
     "bower": "~1.2.8",
-    "karma": "~0.11.12",
+    "karma": "~0.10",
     "karma-jasmine": "~0.1.5",
     "karma-chrome-launcher": "~0.1.2",
     "karma-ie-launcher": "~0.1.1",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-junit-reporter": "~0.2.1",
-    "karma-ng-html2js-preprocessor": "~0.1.0"
+    "karma-junit-reporter": "~0.2.1"
   }
 }
