--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.6"
+    "angular": "~1.2.6",
+    "bootstrap-css": "~3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.6"
