--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "karma-chrome-launcher": "~0.1.2",
     "karma-ie-launcher": "~0.1.1",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-junit-reporter": "~0.2.1"
+    "karma-junit-reporter": "~0.2.1",
+    "gulp": "~3.5.6",
+    "gulp-ngmin": "~0.1.2",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~0.2.1"
   }
 }
