--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "easily add an off-canvas navigation to your angular app",
   "main": "off-canvas.js",
   "scripts": {
-    "test": "./node_modules/.bin/bower install && ./node_modules/.bin/karma start karma.conf.js --browsers Firefox --single-run"
+    "test": "./node_modules/.bin/bower install && ./node_modules/karma/bin/karma start karma.conf.js --browsers Firefox --single-run"
   },
   "repository": {
     "type": "git",
@@ -24,15 +24,15 @@
   },
   "devDependencies": {
     "bower": "~1.3.9",
-    "karma": "~0.10",
-    "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-ie-launcher": "~0.1.1",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-junit-reporter": "~0.2.1",
-    "gulp": "~3.5.6",
+    "gulp": "^3.8.7",
+    "gulp-ng-annotate": "~0.3.0",
     "gulp-rename": "~1.2.0",
-    "gulp-uglify": "~0.2.1",
-    "gulp-ng-annotate": "~0.3.0"
+    "gulp-uglify": "^1.0.1",
+    "karma": "^0.12.23",
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-ie-launcher": "~0.1.1",
+    "karma-jasmine": "~0.1.5",
+    "karma-junit-reporter": "~0.2.1"
   }
 }
