--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "bower": "~1.3.9",
     "gulp": "^3.8.7",
+    "gulp-load-plugins": "^0.6.0",
     "gulp-ng-annotate": "~0.3.0",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "^1.0.1",
