--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
   },
   "devDependencies": {
     "gulp": "^3.8.7",
-    "gulp-load-plugins": "^0.6.0",
-    "gulp-ng-annotate": "~0.3.0",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-ng-annotate": "^1.0.0",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "^1.0.1",
+    "jasmine-core": "^2.3.4",
     "karma": "^0.12.23",
-    "karma-chrome-launcher": "~0.1.2",
+    "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-ie-launcher": "~0.1.1",
-    "karma-jasmine": "~0.1.5",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
     "karma-junit-reporter": "~0.2.1"
   }
 }
